hopefully fix ol number list style on mobile

--- a/static/styles/md.css
+++ b/static/styles/md.css
@@ -50,7 +50,7 @@ ol {
 }
 
 #doc-content ol > li {
-	list-style: numbers;
+	list-style: decimal;
 }
 
 #doc-content ul > li {
